<?xml version="1.0"?>
<package>
  <name>mavscripts</name>
  <version>1.0.0</version>
  <description>The mavscripts package</description>

  <!-- Maintainer tag -->
  <maintainer email="jontiverosrodriguez1@gmail.com">jontiverosrodriguez1@gmail.com</maintainer>

  <!-- License tag -->
  <license>BSD</license>

  <!-- Build and runtime dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>mavros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2</build_depend>

  <!-- Runtime dependencies -->
  <run_depend>mavros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf2</run_depend>

  <!-- Export tag -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>